Реализован новый code style
code style:
 - конечные операторы теперь не используют символ окончания строки ";".
Вместо этого окончание строки переносится на начало следующей
 - добавлено выравнивание многострочных параметров по линии отступа
оперраторов
 - каждый новый запрос отделен символом ";" и комментарием. В
комментарии используется псевдоним первого источника или имя таблицы
помещения результата

Добавлена более полная поддержка операторов соединения:
 - Связь, УсловиеСвязи

Добавлены операторы установки параметров виртуальной таблицы:
 - Период
 - НачалоПериода
 - КонецПериода
 - Условие
 - Периодичность

--- a/src/ExternalDataProcessors/КонструкторМоделиЗапроса/Forms/Форма/Form.form
+++ b/src/ExternalDataProcessors/КонструкторМоделиЗапроса/Forms/Форма/Form.form
@@ -8,10 +8,8 @@
     <userVisible>
       <common>true</common>
     </userVisible>
-    <dataPath xsi:type="form:MultiLanguageDataPath">
-      <paths xsi:type="form:DataPath">
-        <segments>Объект.ТекстЗапроса</segments>
-      </paths>
+    <dataPath xsi:type="form:DataPath">
+      <segments>Объект.ТекстЗапроса</segments>
     </dataPath>
     <extendedTooltip>
       <name>ТекстЗапросаРасширеннаяПодсказка</name>
@@ -90,10 +88,8 @@
     <userVisible>
       <common>true</common>
     </userVisible>
-    <dataPath xsi:type="form:MultiLanguageDataPath">
-      <paths xsi:type="form:DataPath">
-        <segments>Объект.ТекстМодели</segments>
-      </paths>
+    <dataPath xsi:type="form:DataPath">
+      <segments>Объект.ТекстМодели</segments>
     </dataPath>
     <extendedTooltip>
       <name>ТекстМоделиРасширеннаяПодсказка</name>
